--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
         "spatie/laravel-medialibrary": "^9.6",
         "spatie/laravel-permission": "^4.2",
         "stichoza/google-translate-php": "^4.1",
+        "swiftmailer/swiftmailer": "^6.3",
+        "symfony/mailer": "^6.1",
         "torann/geoip": "^3.0",
         "webklex/laravel-imap": "^2.4",
         "yajra/laravel-datatables": "^1.5",
